Back-End: Implement delete template functionality
